# panino

./: .env  .gitignore  .llmignore  AGENTS.md  Dockerfile  Dockerfile.dev  PWA_IMPLEMENTATION.md  README.md  TESTING_SETUP_FIX.md  Todo.md  combine-files.cjs  combined_content.txt  deploy.sh  docker-compose.dev.yml  docker-compose.yml  generate-llm-file.cjs  index.html  nginx.conf.generated  nginx.conf.template  package-lock.json  package.json  print_rendering_context.txt  prompt copy.md  prompt.md  selected_files.txt  setup-nginx.cjs  setup-nginx.js  setup-sudo.sh  vite.config.js
.claude/: settings.json
.github/instructions/: copilot-instructions.md
.github/workflows/: deploy.yml
backend/api-service/: .dockerignore  Dockerfile  Dockerfile.test  agents.md  auth.js  backup.js  db.js  image.js  index.js  mailer.js  package-lock.json  package.json  passwordReset.js  patch-crsqlite.sh  pdf.backup.js  pdf.js  (+7 more)
couchdb-init/: index.js  package-lock.json  package.json
frontend/: .env.production  .llmignore  AGENTS.md  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  vite.config.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: main.json
frontend/src-tauri/icons/: icon.icns
nginx/: Dockerfile
notes/: nginx.conf
poc/: README.md  index.js  package-lock.json  package.json  pdf.js  print-defaults.json  render-test.sh  style-utils.js  test-doc.md
signup-service/: index.js  package-lock.json  package.json
src/: App.vue  AppShell.vue  main.js  router.js
(+306 files in other folders)
