[package]
name = "panino"
version = "0.1.0"
description = "Panino desktop app"
authors = ["Panino"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
